--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2995,13 +2995,13 @@ textarea.form-control-lg {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #01baef;
+  border-color: #01baef;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  background-color: #2a2a72;
+  border-color: #2a2a72;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #fff;
