--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -159,22 +159,96 @@ section {
         
 		.item {
 			width: 250px;
-			height: 300px;
+			height: 340px;
 			text-align: center;
+			text-shadow: 2px 2px #000;
             flex-direction: row;
 			margin: $margen;
-            padding: 15px;
-            text-transform: uppercase;
+            padding: 10px;
 			transition: transform 250ms;
             box-shadow: 10px 10px 11px -1px rgba(0,0,0,0.25);
 			-webkit-box-shadow: 10px 10px 11px -1px rgba(0,0,0,0.25);
             -moz-box-shadow: 10px 10px 11px -1px rgba(0,0,0,0.25);
+			
+			.precioProd{
+				margin: 15px;
+			}
 		}
 
 		.item:hover {
 			transform: scale(1.1);
 		}
 	}
+}
+
+.carro-titulo {
+	font-weight: bold;
+	font-size: 1.2em;
+}
+
+.carro-columna{
+	border-bottom: 1px solid #fff;
+	margin-right: 1.5em;
+	padding-bottom: 10px;
+	margin-top: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.carro-fila {
+	display: flex;	
+}
+
+.carro-item {
+	width: 25%;
+}
+
+.carro-precio {
+	width: 30%;
+	font-size: 1.2em;
+}
+
+.carro-cant {
+	width: 35%;
+}
+
+.carro-item-titulo {
+	margin-left: .5em;
+	font-size: 1.2em;
+}
+
+.carro-cant-input {
+	height: 34px;
+	width: 40px;
+	border-radius: 5px;
+	border: 1px solid;
+	background-color: #eee;
+	padding: 0;
+	text-align: center;
+	font-size: 1em;
+	margin-right: 10px;
+
+}
+
+.carro-total {
+	text-align: end;
+	padding-right: 50px;
+}
+
+.carro-total-titulo {
+	font-weight: bold;
+	font-size: 1.5em;
+	margin-right: 15px;
+}
+
+.carro-total-precio {
+	font-size: 1.3em;
+}
+
+.btn-comprar {
+	display: block;
+	margin: 30px auto 80px auto;
+	font-size: 1.5em;
 }
 
 .tabla {
