--- a/css/destinoCss.css
+++ b/css/destinoCss.css
@@ -191,6 +191,11 @@ section {
   margin: 30px auto 80px auto;
   font-size: 1.5em; }
 
+.btn-ordenar {
+  display: inline;
+  margin: 30px auto 80px auto;
+  font-size: 1.5em; }
+
 .tabla {
   border: solid;
   border-width: 1;
