--- a/css/destinoCss.css
+++ b/css/destinoCss.css
@@ -224,6 +224,18 @@ section {
 .contenedor-formulario {
   width: 100%; }
 
+.no-name {
+  font-family: Tourney;
+  color: #55d6aa;
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  text-align: center; }
+
+.nombre-ingresado {
+  font-family: normal bold "Work Sans", sans-serif; }
+
 @keyframes iniciaPagina {
   0% { }
   50% {
